--- a/Example/DNTimeAndDay/Base.lproj/Main.storyboard
+++ b/Example/DNTimeAndDay/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="DNTimeAndDay_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +16,119 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WRg-s7-pFH">
+                                <rect key="frame" x="252" y="70" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6nH-GV-JH7">
+                                <rect key="frame" x="252" y="161" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="C1a-kl-rdA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yen-qp-YIK">
+                                <rect key="frame" x="184" y="74" width="30" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VH6-vA-hbX">
+                                <rect key="frame" x="176" y="165" width="38" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" minimumValue="-99999" maximumValue="99999" stepValue="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="xp9-vj-Eqq">
+                                <rect key="frame" x="382" y="161" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepTime:" destination="vXZ-lx-hvc" eventType="valueChanged" id="IKG-MW-fe5"/>
+                                </connections>
+                            </stepper>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KQR-s4-dpP">
+                                <rect key="frame" x="252" y="242" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interval" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IsO-dj-5ZH">
+                                <rect key="frame" x="157" y="246" width="57" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNU-V8-Yua">
+                                <rect key="frame" x="225" y="313" width="150" height="30"/>
+                                <state key="normal" title="Current Time and Day"/>
+                                <connections>
+                                    <action selector="setCurrentTimeAndDay:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="DUY-H9-uR6"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12-Hour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hfx-O8-YkS">
+                                <rect key="frame" x="398" y="359" width="63" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ebc-LY-sjo">
+                                <rect key="frame" x="405" y="313" width="51" height="31"/>
+                                <connections>
+                                    <action selector="switchTimeFormat:" destination="vXZ-lx-hvc" eventType="valueChanged" id="HuA-6n-c55"/>
+                                </connections>
+                            </switch>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" minimumValue="-99999" maximumValue="99999" stepValue="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="oRY-y9-zRY">
+                                <rect key="frame" x="382" y="71" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepDay:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Wqm-Nq-2U8"/>
+                                </connections>
+                            </stepper>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" autorepeat="NO" minimumValue="-99999" maximumValue="99999" stepValue="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="d9T-Tb-ih0">
+                                <rect key="frame" x="382" y="243" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepTimeInterval:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Wzl-87-EKi"/>
+                                </connections>
+                            </stepper>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="leading" secondItem="WRg-s7-pFH" secondAttribute="leading" id="02V-Vf-PD3"/>
+                            <constraint firstItem="VNU-V8-Yua" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="0kB-GZ-Ku6"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="top" secondItem="WRg-s7-pFH" secondAttribute="bottom" constant="61" id="69Z-mI-3MM"/>
+                            <constraint firstItem="yen-qp-YIK" firstAttribute="trailing" secondItem="VH6-vA-hbX" secondAttribute="trailing" id="7DL-gz-gVr"/>
+                            <constraint firstItem="VNU-V8-Yua" firstAttribute="top" secondItem="KQR-s4-dpP" secondAttribute="bottom" constant="41" id="Jtd-9T-R1U"/>
+                            <constraint firstItem="d9T-Tb-ih0" firstAttribute="top" secondItem="KQR-s4-dpP" secondAttribute="top" constant="1" id="KWC-0Y-KBs"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="centerX" secondItem="d9T-Tb-ih0" secondAttribute="centerX" id="Kdf-5z-Hhh"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="leading" secondItem="VNU-V8-Yua" secondAttribute="trailing" constant="30" id="Lhu-18-3Zr"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="trailing" secondItem="WRg-s7-pFH" secondAttribute="trailing" id="Nbv-7n-nqb"/>
+                            <constraint firstItem="d9T-Tb-ih0" firstAttribute="top" secondItem="xp9-vj-Eqq" secondAttribute="bottom" constant="53" id="Pba-jF-bXH"/>
+                            <constraint firstItem="Hfx-O8-YkS" firstAttribute="centerX" secondItem="ebc-LY-sjo" secondAttribute="centerX" id="QfU-en-Bkk"/>
+                            <constraint firstItem="yen-qp-YIK" firstAttribute="trailing" secondItem="IsO-dj-5ZH" secondAttribute="trailing" id="Rv6-pM-Ltw"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="SPW-Wi-xEX"/>
+                            <constraint firstItem="oRY-y9-zRY" firstAttribute="leading" secondItem="xp9-vj-Eqq" secondAttribute="leading" id="VLx-zj-vpG"/>
+                            <constraint firstItem="KQR-s4-dpP" firstAttribute="top" secondItem="6nH-GV-JH7" secondAttribute="bottom" constant="51" id="Wv6-HM-4lf"/>
+                            <constraint firstItem="WRg-s7-pFH" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="ZqL-bV-xH0"/>
+                            <constraint firstItem="VNU-V8-Yua" firstAttribute="centerX" secondItem="KQR-s4-dpP" secondAttribute="centerX" id="bt5-pH-Ape"/>
+                            <constraint firstItem="oRY-y9-zRY" firstAttribute="centerY" secondItem="yen-qp-YIK" secondAttribute="centerY" constant="1" id="dID-ny-KZH"/>
+                            <constraint firstItem="oRY-y9-zRY" firstAttribute="top" secondItem="WRg-s7-pFH" secondAttribute="top" constant="1" id="eIF-je-UYS"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="leading" secondItem="KQR-s4-dpP" secondAttribute="leading" id="hXl-wU-jqq"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="centerY" secondItem="VH6-vA-hbX" secondAttribute="centerY" id="k1G-Hf-16f"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="trailing" secondItem="KQR-s4-dpP" secondAttribute="trailing" id="kNn-B4-08I"/>
+                            <constraint firstItem="d9T-Tb-ih0" firstAttribute="leading" secondItem="KQR-s4-dpP" secondAttribute="trailing" constant="33" id="mgQ-Uy-7JQ"/>
+                            <constraint firstItem="Hfx-O8-YkS" firstAttribute="top" secondItem="ebc-LY-sjo" secondAttribute="bottom" constant="15" id="nkb-dS-DTa"/>
+                            <constraint firstItem="6nH-GV-JH7" firstAttribute="leading" secondItem="VH6-vA-hbX" secondAttribute="trailing" constant="38" id="p0P-J1-QbT"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="top" secondItem="d9T-Tb-ih0" secondAttribute="bottom" constant="41" id="pIx-Bc-lmi"/>
+                            <constraint firstItem="d9T-Tb-ih0" firstAttribute="centerY" secondItem="IsO-dj-5ZH" secondAttribute="centerY" constant="1" id="sD3-fb-hoO"/>
+                            <constraint firstItem="d9T-Tb-ih0" firstAttribute="leading" secondItem="xp9-vj-Eqq" secondAttribute="leading" id="wc3-OE-mmO"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dayTextField" destination="WRg-s7-pFH" id="aQ1-fS-A8o"/>
+                        <outlet property="formatLabel" destination="Hfx-O8-YkS" id="mAW-KO-Elo"/>
+                        <outlet property="intervalTextField" destination="KQR-s4-dpP" id="qiB-aw-L6U"/>
+                        <outlet property="timeTextField" destination="6nH-GV-JH7" id="xog-GZ-xgY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
