--- a/Example/DNTimeAndDay/Base.lproj/Main.storyboard
+++ b/Example/DNTimeAndDay/Base.lproj/Main.storyboard
@@ -70,17 +70,23 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12-Hour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hfx-O8-YkS">
-                                <rect key="frame" x="398" y="359" width="63" height="21"/>
+                                <rect key="frame" x="367" y="364" width="63" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ebc-LY-sjo">
-                                <rect key="frame" x="405" y="313" width="51" height="31"/>
+                                <rect key="frame" x="276" y="359" width="51" height="31"/>
                                 <connections>
                                     <action selector="switchTimeFormat:" destination="vXZ-lx-hvc" eventType="valueChanged" id="HuA-6n-c55"/>
                                 </connections>
                             </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONW-8i-MOm">
+                                <rect key="frame" x="367" y="428" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AFt-Gl-qlu">
                                 <rect key="frame" x="430" y="65" width="40" height="42"/>
                                 <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -166,6 +172,12 @@
                                     <action selector="increaseTaggedTextField:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="grs-WH-pBu"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5F6-Iu-skr">
+                                <rect key="frame" x="276" y="423" width="51" height="31"/>
+                                <connections>
+                                    <action selector="switchDayFormat:" destination="vXZ-lx-hvc" eventType="valueChanged" id="upt-SI-1Pg"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -174,23 +186,27 @@
                             <constraint firstItem="VH6-vA-hbX" firstAttribute="centerY" secondItem="6nH-GV-JH7" secondAttribute="centerY" id="0lc-SH-uWv"/>
                             <constraint firstItem="AFt-Gl-qlu" firstAttribute="centerY" secondItem="STv-h9-3SY" secondAttribute="centerY" id="3PW-SW-XSo"/>
                             <constraint firstItem="P2V-3M-VYq" firstAttribute="centerY" secondItem="6nH-GV-JH7" secondAttribute="centerY" id="5Ph-6h-zMl"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="top" secondItem="VNU-V8-Yua" secondAttribute="bottom" constant="16" id="64k-m7-z95"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="top" secondItem="WRg-s7-pFH" secondAttribute="bottom" constant="61" id="69Z-mI-3MM"/>
                             <constraint firstItem="yen-qp-YIK" firstAttribute="trailing" secondItem="VH6-vA-hbX" secondAttribute="trailing" id="7DL-gz-gVr"/>
+                            <constraint firstItem="5F6-Iu-skr" firstAttribute="top" secondItem="ebc-LY-sjo" secondAttribute="bottom" constant="33" id="8cZ-nF-JGr"/>
                             <constraint firstItem="ANA-Iz-fKg" firstAttribute="leading" secondItem="P2V-3M-VYq" secondAttribute="trailing" id="D3o-cX-OEu"/>
                             <constraint firstItem="STv-h9-3SY" firstAttribute="leading" secondItem="WRg-s7-pFH" secondAttribute="trailing" constant="41" id="FPz-NM-IqY"/>
                             <constraint firstItem="STv-h9-3SY" firstAttribute="centerY" secondItem="WRg-s7-pFH" secondAttribute="centerY" id="HLl-Zc-Dbu"/>
-                            <constraint firstItem="ebc-LY-sjo" firstAttribute="centerY" secondItem="VNU-V8-Yua" secondAttribute="centerY" id="JaY-rq-ZUA"/>
                             <constraint firstItem="VNU-V8-Yua" firstAttribute="top" secondItem="KQR-s4-dpP" secondAttribute="bottom" constant="41" id="Jtd-9T-R1U"/>
-                            <constraint firstItem="ebc-LY-sjo" firstAttribute="leading" secondItem="VNU-V8-Yua" secondAttribute="trailing" constant="30" id="Lhu-18-3Zr"/>
+                            <constraint firstItem="5F6-Iu-skr" firstAttribute="leading" secondItem="ebc-LY-sjo" secondAttribute="leading" id="Mpk-YY-4V8"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="trailing" secondItem="WRg-s7-pFH" secondAttribute="trailing" id="Nbv-7n-nqb"/>
-                            <constraint firstItem="Hfx-O8-YkS" firstAttribute="centerX" secondItem="ebc-LY-sjo" secondAttribute="centerX" id="QfU-en-Bkk"/>
                             <constraint firstItem="yen-qp-YIK" firstAttribute="trailing" secondItem="IsO-dj-5ZH" secondAttribute="trailing" id="Rv6-pM-Ltw"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="SPW-Wi-xEX"/>
                             <constraint firstItem="IsO-dj-5ZH" firstAttribute="centerY" secondItem="KQR-s4-dpP" secondAttribute="centerY" id="T8H-E0-T6H"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="centerY" secondItem="Hfx-O8-YkS" secondAttribute="centerY" id="VRl-tA-grH"/>
+                            <constraint firstItem="ONW-8i-MOm" firstAttribute="leading" secondItem="Hfx-O8-YkS" secondAttribute="leading" id="Vcy-4M-yAY"/>
                             <constraint firstItem="KQR-s4-dpP" firstAttribute="top" secondItem="6nH-GV-JH7" secondAttribute="bottom" constant="51" id="Wv6-HM-4lf"/>
                             <constraint firstItem="WRg-s7-pFH" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="ZqL-bV-xH0"/>
+                            <constraint firstItem="Hfx-O8-YkS" firstAttribute="trailing" secondItem="cah-yc-JVH" secondAttribute="trailing" id="akt-Py-2co"/>
                             <constraint firstItem="VNU-V8-Yua" firstAttribute="centerX" secondItem="KQR-s4-dpP" secondAttribute="centerX" id="bt5-pH-Ape"/>
                             <constraint firstItem="cah-yc-JVH" firstAttribute="centerY" secondItem="KQR-s4-dpP" secondAttribute="centerY" id="cHZ-E2-5lq"/>
+                            <constraint firstItem="ebc-LY-sjo" firstAttribute="centerX" secondItem="VNU-V8-Yua" secondAttribute="centerX" id="cPK-Qi-Thv"/>
                             <constraint firstItem="65b-o4-XUg" firstAttribute="leading" secondItem="cah-yc-JVH" secondAttribute="trailing" constant="-2" id="e5M-6P-Hqk"/>
                             <constraint firstItem="P2V-3M-VYq" firstAttribute="leading" secondItem="6nH-GV-JH7" secondAttribute="trailing" constant="41" id="fBs-up-fCq"/>
                             <constraint firstItem="AFt-Gl-qlu" firstAttribute="leading" secondItem="STv-h9-3SY" secondAttribute="trailing" id="flx-hW-Y9B"/>
@@ -198,17 +214,18 @@
                             <constraint firstItem="ANA-Iz-fKg" firstAttribute="centerY" secondItem="P2V-3M-VYq" secondAttribute="centerY" id="jL0-aV-oQI"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="centerY" secondItem="VH6-vA-hbX" secondAttribute="centerY" id="k1G-Hf-16f"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="trailing" secondItem="KQR-s4-dpP" secondAttribute="trailing" id="kNn-B4-08I"/>
-                            <constraint firstItem="Hfx-O8-YkS" firstAttribute="top" secondItem="ebc-LY-sjo" secondAttribute="bottom" constant="15" id="nkb-dS-DTa"/>
                             <constraint firstItem="6nH-GV-JH7" firstAttribute="leading" secondItem="VH6-vA-hbX" secondAttribute="trailing" constant="38" id="p0P-J1-QbT"/>
+                            <constraint firstItem="5F6-Iu-skr" firstAttribute="centerY" secondItem="ONW-8i-MOm" secondAttribute="centerY" id="pD7-x0-4VE"/>
                             <constraint firstItem="yen-qp-YIK" firstAttribute="centerY" secondItem="WRg-s7-pFH" secondAttribute="centerY" id="s6q-c5-BIV"/>
                             <constraint firstItem="65b-o4-XUg" firstAttribute="centerY" secondItem="cah-yc-JVH" secondAttribute="centerY" id="sYw-Py-EQX"/>
                             <constraint firstItem="cah-yc-JVH" firstAttribute="leading" secondItem="KQR-s4-dpP" secondAttribute="trailing" constant="41" id="tel-Hd-FtO"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dayFormatLabel" destination="ONW-8i-MOm" id="ckv-mJ-50J"/>
                         <outlet property="dayTextField" destination="WRg-s7-pFH" id="aQ1-fS-A8o"/>
-                        <outlet property="formatLabel" destination="Hfx-O8-YkS" id="mAW-KO-Elo"/>
                         <outlet property="intervalTextField" destination="KQR-s4-dpP" id="qiB-aw-L6U"/>
+                        <outlet property="timeFormatLabel" destination="Hfx-O8-YkS" id="qyN-10-CxV"/>
                         <outlet property="timeTextField" destination="6nH-GV-JH7" id="xog-GZ-xgY"/>
                     </connections>
                 </viewController>
